Wrote on synchrony and reciprocity

--- a/aalto.bib
+++ b/aalto.bib
@@ -185,6 +185,23 @@
   isbn = {1-134-96425-0}
 }
 
+@article{aucouturierCheekChipDancing2008,
+  title = {Cheek to {{Chip}}: {{Dancing Robots}} and {{AI}}'s {{Future}}},
+  shorttitle = {Cheek to {{Chip}}},
+  author = {Aucouturier, Jean-Julien and Ikeuchi, Katsushi and Hirukawa, Hirohisa and Nakaoka, Shin'ichiro and Shiratori, Takaaki and Kudoh, Shunsuke and Kanehiro, Fumio and Ogata, Tetsuya and Kozima, Hideki and Okuno, Hiroshi G. and Michalowski, Marek P. and Ogai, Yuta and Ikegami, Takashi and Kosuge, Kazuhiro and Takeda, Takahiro and Hirata, Yasuhisa},
+  year = {2008},
+  month = mar,
+  volume = {23},
+  pages = {74--84},
+  issn = {1941-1294},
+  doi = {10.1109/MIS.2008.22},
+  abstract = {Recent generations of humanoid robots increasingly resemble humans in shape and articulatory capacities. This progress has motivated researchers to design dancing robots that can mimic the complexity and style of human choreographic dancing. Such complicated actions are usually programmed manually and ad hoc. However, this approach is both tedious and inflexible. Researchers at the University of Tokyo have developed the learning-from-observation (LFO) training method to overcome this difficulty.1-2 LFO enables a robot to acquire knowledge of what to do and how to do it from observing human demonstrations. Direct mapping from human joint angles to robot joint angles doesn't work well because of the dynamic and kinematic differences between the observed person and the robot (for example, weight, balance, and arm and leg lengths). LFO therefore relies on predesigned task models, which represent only the actions (and features thereof) that are essential to mimicry. Then it adapts these actions to the robot's morphology and dynamics so that it can mimic the movement. This indirect, two-step mapping is crucial for robust imitation and performance.},
+  file = {/home/avnerus/Zotero/storage/RP58F5SG/Aucouturier et al. - 2008 - Cheek to Chip Dancing Robots and AI's Future.pdf;/home/avnerus/Zotero/storage/LKTKMZHK/4475863.html},
+  journal = {IEEE Intelligent Systems},
+  keywords = {artificial intelligence,autonomous behavior,Biological system modeling,chaotic itinerancy,Dance Partner Robot,dancing robots,human choreographic dancing,humanoid robots,Humanoid robots,Humans,Intelligent robots,intermodal mapping,Keepon,Kinematics,learning (artificial intelligence),learning-from-observation training method,Leg,Legged locomotion,mobile robots,Morphology,neural mapping,rhythmic intelligence,robot dynamic,robot dynamics,robot joint angle mapping,robot kinematics,robotics,Service robots,Shape,situated knowledge,social intelligence,symbol grounding,synesthesia,task models},
+  number = {2}
+}
+
 @book{augusterodinRodinArtArtists2012,
   title = {Rodin on {{Art}} and {{Artists}}: {{Conversations}} with {{Paul Gsell}}},
   author = {Auguste Rodin, Paul Gsell},
@@ -201,6 +218,24 @@
   howpublished = {https://docs.google.com/document/u/1/d/1hNAH5C4ZbXZoCfP\_CN0hTV4hGxe\_qqyg/edit?usp=drive\_web\&ouid=102043793188119894386\&dls=true\&usp=embed\_facebook},
   journal = {Google Docs},
   language = {en}
+}
+
+@article{aymerich-franchEffectsFacialVoice,
+  title = {Effects of {{Facial}} and {{Voice Similarity}} on {{Presence}} in a {{Public Speaking Virtual Environment}}},
+  author = {{Aymerich-Franch}, Laura and Karutz, Cody and Bailenson, Jeremy N},
+  pages = {7},
+  abstract = {Self-presence examines how much a user extends features of his or her identity into a virtually mediated world while represented by an avatar. Additionally, social and spatial presence measure how a user treats actors and environments in mediated space as if they were real. In this study, we examined the effects of facial and voice similarities of participants on self-reported presence measures in a public speaking task that takes place in an immersive virtual environment.},
+  file = {/home/avnerus/Zotero/storage/KFUB6TET/Aymerich-Franch et al. - Effects of Facial and Voice Similarity on Presence.pdf},
+  language = {en}
+}
+
+@inproceedings{aymerich-franchEffectsFacialVoice2012,
+  title = {Effects of Facial and Voice Similarity on Presence in a Public Speaking Virtual Environment},
+  booktitle = {Proceedings of the {{International Society}} for {{Presence Research Annual Conference}}},
+  author = {{Aymerich-Franch}, Laura and Karutz, Cody and Bailenson, Jeremy N.},
+  year = {2012},
+  pages = {24--26},
+  file = {/home/avnerus/Zotero/storage/PV4VZPK9/ubc_2003-0174.pdf}
 }
 
 @article{banksAvatarsAreSometimes2016,
@@ -318,6 +353,15 @@
   pages = {176--209},
   publisher = {{Cambridge University Press Cambridge}},
   journal = {Face-to-face communication over the Internet: Issues, research, challenges}
+}
+
+@article{bernieriInterpersonalCoordinationBehavior1991,
+  title = {Interpersonal Coordination: {{Behavior}} Matching and Interactional Synchrony.},
+  author = {Bernieri, Frank J. and Rosenthal, Robert},
+  year = {1991},
+  publisher = {{Editions de la Maison des Sciences de l'Homme}},
+  file = {/home/avnerus/Zotero/storage/ZWZBAPEM/Bernieri and Rosenthal - 1991 - Interpersonal coordination Behavior matching and .pdf},
+  isbn = {0521363888}
 }
 
 @misc{BestRobotsWorld,
@@ -528,6 +572,22 @@
   journal = {Intergroup behavior}
 }
 
+@article{burgoonAdaptationDyadicInteraction1993,
+  title = {Adaptation in {{Dyadic Interaction}}: {{Defining}} and {{Operationalizing Patterns}} of {{Reciprocity}} and {{Compensation}}},
+  shorttitle = {Adaptation in {{Dyadic Interaction}}},
+  author = {Burgoon, Judee K. and Dillman, Leesa and Stem, Lesa A.},
+  year = {1993},
+  volume = {3},
+  pages = {295--316},
+  issn = {1468-2885},
+  doi = {10.1111/j.1468-2885.1993.tb00076.x},
+  abstract = {Interaction patterns of reciprocity and compensation have received extensive consideration in the literature on mutual influence processes. Unfortunately, conflicting and ambiguous definitions of these concepts, along with inadequate differentiation from other patterns such as matching, convergence, divergence, and complementarity have hindered theoretical and empirical progress. This article is dedicated to sorting out the differences among the various accommodation processes and offering appropriate constitutive definitions and operationalizations. It is proposed that definitions of reciprocity and compensation be distinguished from matching and complementarity in that the former incorporate principles of(1) directedness, (2) contingency, (3) both unidirectional and mutual influence, (4) change rather than maintenance, (5) directionality rather than magnitude of change, (6) intentional and automatic processes, and (7) functional equivalence of behaviors. Operationally, these criteria imply a focus on designs demonstrating causality or strong association between partner behaviors, concatenous and lagged responses, within-dyad and longitudinal analyses, and, for many purposes, a more molar perspective. Issues of macro versus micro measurement, perceived versus actual reciprocity and compensation, and reliance on observer versus participant perspectives are also considered.},
+  file = {/home/avnerus/Zotero/storage/CJN6W2SM/Burgoon et al. - 1993 - Adaptation in Dyadic Interaction Defining and Ope.pdf;/home/avnerus/Zotero/storage/XRLY3RJH/j.1468-2885.1993.tb00076.html},
+  journal = {Communication Theory},
+  language = {en},
+  number = {4}
+}
+
 @article{burgoonNonverbalSignals1994,
   title = {Nonverbal Signals},
   author = {Burgoon, Judee K. and Hoobler, Gregory D.},
@@ -535,6 +595,14 @@
   volume = {2},
   pages = {229--285},
   journal = {Handbook of interpersonal communication}
+}
+
+@article{butlerOGCTestbed14Point,
+  title = {{{OGC Testbed}}-14: {{Point Cloud Data Handling Engineering Report}}},
+  author = {Butler, Howard},
+  pages = {53},
+  file = {/home/avnerus/Zotero/storage/E4ICWD9K/Butler - OGC Testbed-14 Point Cloud Data Handling Engineer.pdf},
+  language = {en}
 }
 
 @inproceedings{caldwellTelepresenceVisualAudio1994,
@@ -554,6 +622,15 @@
   year = {2000},
   month = jan,
   pages = {22--46}
+}
+
+@incollection{campbellInterpersonalCoordinationComputerMediated2015,
+  title = {Interpersonal {{Coordination}} in {{Computer}}-{{Mediated Communication}}},
+  booktitle = {Encyclopedia of {{Information Science}} and {{Technology}}, {{Third Edition}}},
+  author = {Campbell, Jamonn},
+  year = {2015},
+  pages = {2079--2088},
+  publisher = {{IGI Global}}
 }
 
 @misc{CanImaginedInteractions,
@@ -683,6 +760,20 @@
 @misc{colaSmallWorldMachines,
   title = {Small {{World Machines}}},
   author = {Cola, Coca}
+}
+
+@article{coleImmunityPrincipleView2000,
+  title = {On the Immunity Principle: A View from a Robot},
+  author = {Cole, Jonathan and Sacks, Oliver and Waterman, Ian},
+  year = {2000},
+  month = may,
+  volume = {4},
+  pages = {167},
+  issn = {1364-6613},
+  doi = {10.1016/S1364-6613(00)01459-5},
+  file = {/home/avnerus/Zotero/storage/DZ4L822L/Cole et al. - 2000 - On the immunity principle a view from a robot.pdf},
+  journal = {Trends in Cognitive Sciences},
+  number = {5}
 }
 
 @article{coyleBioinspiredSoftRobotics2018,
@@ -1001,6 +1092,21 @@
   pages = {48--63},
   publisher = {{MIT Press}},
   isbn = {0-262-07203-3}
+}
+
+@article{driessenEffectsNetworkDelay2011,
+  title = {The {{Effects}} of {{Network Delay}} on {{Tempo}} in {{Musical Performance}}},
+  author = {Driessen, Peter F. and Darcie, Thomas E. and Pillay, Bipin},
+  year = {2011},
+  month = mar,
+  volume = {35},
+  pages = {76--89},
+  issn = {0148-9267, 1531-5169},
+  doi = {10.1162/COMJ_a_00041},
+  file = {/home/avnerus/Zotero/storage/W7R5229X/Driessen et al. - 2011 - The Effects of Network Delay on Tempo in Musical P.pdf},
+  journal = {Computer Music Journal},
+  language = {en},
+  number = {1}
 }
 
 @inproceedings{eckertIndustryTrends20402019,
@@ -2791,6 +2897,23 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@article{lorenzSynchronyReciprocityKey2016,
+  title = {Synchrony and {{Reciprocity}}: {{Key Mechanisms}} for {{Social Companion Robots}} in {{Therapy}} and {{Care}}},
+  shorttitle = {Synchrony and {{Reciprocity}}},
+  author = {Lorenz, Tamara and Weiss, Astrid and Hirche, Sandra},
+  year = {2016},
+  month = jan,
+  volume = {8},
+  pages = {125--143},
+  issn = {1875-4791, 1875-4805},
+  doi = {10.1007/s12369-015-0325-8},
+  abstract = {Studies and concepts for social companion robots in therapy and care exist, however, they often lack the integration of convincing behavioral and social key mechanisms which enable a positive and successfull interaction experience. In this article we argue that synchrony and reciprocity are two key mechanisms of human interaction which affect both in the behavioral level (movements) and in the social level (relationships). Given that both a change in movement behavior and social behavior are an objective in the contexts of aging-in-place, neurocognitive and neurophysical rehabilitation, and depression, these key mechanisms should also be included in the interaction with social companion robots in therapy and care. We give an overview on the two concepts ranging from a social neuroscience over a behavioral towards a sociological perspective and argue that both concepts affect each other and are up to now only marginally applied in human\textendash robot interaction.},
+  file = {/home/avnerus/Zotero/storage/LJ9RPKPU/Lorenz et al. - 2016 - Synchrony and Reciprocity Key Mechanisms for Soci.pdf},
+  journal = {International Journal of Social Robotics},
+  language = {en},
+  number = {1}
+}
+
 @inproceedings{luengoAutomaticEmotionRecognition2005,
   title = {Automatic Emotion Recognition Using Prosodic Parameters},
   booktitle = {Ninth {{European Conference}} on {{Speech Communication}} and {{Technology}}},
@@ -2815,7 +2938,6 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   title = {Reification and the {{Consciousness}} of the {{Proletariat}}},
   booktitle = {Karl {{Marx}}},
   author = {Luk{\'a}cs, Georg},
-  editor = {Ollman, Bertell and Anderson, Kevin B.},
   year = {2017},
   month = may,
   edition = {First},
@@ -3190,6 +3312,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   title = {Mishu {{Lariv Ito}}}
 }
 
+@article{mitchellMismatchHumanRealism2011,
+  title = {A {{Mismatch}} in the {{Human Realism}} of {{Face}} and {{Voice Produces}} an {{Uncanny Valley}}},
+  author = {Mitchell, Wade J and Szerszen, Kevin A and Lu, Amy Shirong and Schermerhorn, Paul W and Scheutz, Matthias and MacDorman, Karl F},
+  year = {2011},
+  month = jan,
+  volume = {2},
+  pages = {10--12},
+  issn = {2041-6695, 2041-6695},
+  doi = {10.1068/i0415},
+  abstract = {The uncanny valley has become synonymous with the uneasy feeling of viewing an animated character or robot that looks imperfectly human. Although previous uncanny valley experiments have focused on relations among a character's visual elements, the current experiment examines whether a mismatch in the human realism of a character's face and voice causes it to be evaluated as eerie. The results support this hypothesis.},
+  file = {/home/avnerus/Zotero/storage/A8ZGIB3F/Mitchell et al. - 2011 - A Mismatch in the Human Realism of Face and Voice .pdf},
+  journal = {i-Perception},
+  language = {en},
+  number = {1}
+}
+
 @misc{mjiTapiaCommunicationRobot2015,
   title = {Tapia - {{Communication Robot}}},
   author = {{MJI}},
@@ -3435,6 +3573,14 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {SHOOTING TO KILL: THE LAW GOVERNING LETHAL FORCE IN CONTEXT, Simon Bronitt, ed., Forthcoming}
 }
 
+@article{odaToolsTechniquesRhythmic,
+  title = {Tools and {{Techniques}} for {{Rhythmic Synchronization}} in {{Networked Musical Performance}}},
+  author = {Oda, Reid Kei},
+  pages = {162},
+  file = {/home/avnerus/Zotero/storage/EA4Z3MKN/Oda - Tools and Techniques for Rhythmic Synchronization .pdf},
+  language = {en}
+}
+
 @article{ogawaExploringNaturalReaction2011,
   title = {Exploring the {{Natural Reaction}} of {{Young}} and {{Aged Person}} with {{Telenoid}} in a {{Real World}}},
   author = {Ogawa, Kohei and Nishio, Shuichi and Koda, Kensuke and Balistreri, Giuseppe and Watanabe, Tetsuya and Ishiguro, Hiroshi and {ATR Intelligent Robotics and Communication Laboratory, 2-2-2 Hikaridai, Seikacho, Souraku-gun, Kyoto 619-0288, Japan} and {Graduate School of Engineering Science, Osaka University, 1-3 Machikaneyama, Toyonaka, Osaka 560-8531, Japan} and {Dipartimento di Ingegneria Informatica, Universit\`a degli Studi di Palermo, Viale delle Scienze, Edificio 690128 Palermo, Italia}},
@@ -3531,6 +3677,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Well},
   keywords = {Mind},
   language = {en-US}
+}
+
+@article{parkSemanticImageSynthesis2019a,
+  title = {Semantic {{Image Synthesis}} with {{Spatially}}-{{Adaptive Normalization}}},
+  author = {Park, Taesung and Liu, Ming-Yu and Wang, Ting-Chun and Zhu, Jun-Yan},
+  year = {2019},
+  month = nov,
+  abstract = {We propose spatially-adaptive normalization, a simple but effective layer for synthesizing photorealistic images given an input semantic layout. Previous methods directly feed the semantic layout as input to the deep network, which is then processed through stacks of convolution, normalization, and nonlinearity layers. We show that this is suboptimal as the normalization layers tend to ``wash away'' semantic information. To address the issue, we propose using the input layout for modulating the activations in normalization layers through a spatially-adaptive, learned transformation. Experiments on several challenging datasets demonstrate the advantage of the proposed method over existing approaches, regarding both visual fidelity and alignment with input layouts. Finally, our model allows user control over both semantic and style. Code is available at https://github.com/NVlabs/SPADE .},
+  archivePrefix = {arXiv},
+  eprint = {1903.07291},
+  eprinttype = {arxiv},
+  file = {/home/avnerus/Zotero/storage/PYH99RRJ/Park et al. - 2019 - Semantic Image Synthesis with Spatially-Adaptive N.pdf},
+  journal = {arXiv:1903.07291 [cs]},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Graphics,Computer Science - Machine Learning,I.3.3,I.5,I.5.4},
+  language = {en},
+  primaryClass = {cs}
 }
 
 @misc{paroPAROTherapeuticRobot,
@@ -3739,6 +3901,23 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Journal of Personality and Social Psychology},
   language = {en},
   number = {5}
+}
+
+@article{phillips-silverEcologyEntrainmentFoundations2010,
+  title = {The {{Ecology}} of {{Entrainment}}: {{Foundations}} of {{Coordinated Rhythmic Movement}}},
+  shorttitle = {The {{Ecology}} of {{Entrainment}}},
+  author = {{Phillips-Silver}, Jessica and Aktipis, C. Athena and A. Bryant, Gregory},
+  year = {2010},
+  month = sep,
+  volume = {28},
+  pages = {3--14},
+  issn = {0730-7829, 1533-8312},
+  doi = {10.1525/mp.2010.28.1.3},
+  abstract = {Entrainment has been studied in a variety of contexts including music perception, dance, verbal communication and motor coordination more generally. Here we seek to provide a unifying framework that incorporates the key aspects of entrainment as it has been studied in these varying domains. We propose that there are a number of types of entrainment that build upon pre-existing adaptations that allow organisms to perceive stimuli as rhythmic, to produce periodic stimuli, and to integrate the two using sensory feedback. We suggest that social entrainment is a special case of spatiotemporal coordination where the rhythmic signal originates from another individual. We use this framework to understand the function and evolutionary basis for coordinated rhythmic movement and to explore questions about the nature of entrainment in music and dance. The framework of entrainment presented here has a number of implications for the vocal learning hypothesis and other proposals for the evolution of coordinated rhythmic behavior across an array of species.},
+  file = {/home/avnerus/Zotero/storage/ZQIHINWT/Phillips-Silver et al. - 2010 - The Ecology of Entrainment Foundations of Coordin.pdf},
+  journal = {Music Perception},
+  language = {en},
+  number = {1}
 }
 
 @book{posnerRoutledgeCompanionPuppetry2014,
@@ -4595,6 +4774,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   issn = {2162-1535(Electronic),0275-3987(Print)},
   doi = {10.1037/pmu0000181},
   abstract = {Interpersonal synchronization of movements, such as walking at the same pace or dancing to the same beat, can strengthen pro-social behavior and affiliation. People all over the world come together every now and then to become entrained with a shared musical rhythm. Thus, the social and emotional power of music might further tighten interpersonal bonds. In the current study, we investigated whether social entrainment affects affiliation and helpfulness more strongly when tapping to music compared with a metronome. The between-subjects design consisted of four groups: tapping to the beat of music or to an isochronous metronome with an experimenter who tapped synchronously or asynchronously. The results of an implicit test showed that when listening to music, participants were more helpful toward a person who tapped synchronously compared with asynchronously. No such effect was found when listening and tapping to a metronome. The results of explicit ratings of the experimenter's likability, however, did not confirm this effect. Music is a product of social interactions and might even be the result of evolutionary adaptation. Thus, we conclude that interpersonal synchrony or asynchrony during listening to music can fulfill or violate hard-wired social expectations. Compared with the experience of just moving in synchrony with a simple isochronous timekeeper, such as a metronome, social entrainment with music might increase social bonding by adding an extra layer of affective and neurophysiological mechanisms. The current experiment additionally shows that implicit or indirect measures can help elucidate how music, entrainment, affiliation, and pro-social behavior are connected. (PsycINFO Database Record (c) 2017 APA, all rights reserved)},
+  file = {/home/avnerus/Zotero/storage/JEJMQJBN/Stupacher et al. - 2017 - Synchrony and sympathy Social entrainment with mu.pdf},
   journal = {Psychomusicology: Music, Mind, and Brain},
   keywords = {*Interpersonal Interaction,*Music,*Perceptual Motor Processes,*Prosocial Behavior,*Synchrony,Cooperation,Finger Tapping,Neurophysiology,Rhythm},
   number = {3}
